core/target/generated-sources/antlr4/com/purbon/kafka/policy/RegoParser.java
// Generated from com/purbon/kafka/policy/RegoParser.g4 by ANTLR 4.7.1
package com.purbon.kafka.policy;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RegoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Comment=1, String=2, Bool=3, Null=4, As=5, Default=6, Else=7, Import=8, 
		Package=9, Not=10, With=11, Set=12, LSBrace=13, LCBrace=14, LParan=15, 
		RSBrace=16, RCBrace=17, RParan=18, Mid=19, FactorOperator=20, ArithOperator=21, 
		RelationOperator=22, EqOper=23, Comma=24, Semicolon=25, Colon=26, Ampersand=27, 
		Dot=28, WhiteSpace=29, LineEnd=30, WindowsLineEnd=31, UnsignedNumber=32, 
		Name=33;
	public static final int
		RULE_root = 0, RULE_stmt = 1, RULE_regoPackage = 2, RULE_importDirective = 3, 
		RULE_regoRules = 4, RULE_ruleHead = 5, RULE_ruleBody = 6, RULE_ruleExt = 7, 
		RULE_regoElse = 8, RULE_regoBody = 9, RULE_nonEmptyBraceEnclosedBody = 10, 
		RULE_query = 11, RULE_literal = 12, RULE_literalExpr = 13, RULE_withKeyword = 14, 
		RULE_functionCall = 15, RULE_exprTermPair = 16, RULE_termPair = 17, RULE_exprTermPairList = 18, 
		RULE_exprTerm = 19, RULE_exprTermList = 20, RULE_relationExpr = 21, RULE_bitwiseOrExpr = 22, 
		RULE_bitwiseAndExpr = 23, RULE_arithExpr = 24, RULE_factorExpr = 25, RULE_term = 26, 
		RULE_arrayComprehension = 27, RULE_setComprehension = 28, RULE_objectComprehension = 29, 
		RULE_object_ = 30, RULE_objectItem = 31, RULE_array_ = 32, RULE_set_ = 33, 
		RULE_emptySet = 34, RULE_nonEmptySet = 35, RULE_ref = 36, RULE_refOperand = 37, 
		RULE_refOperandDot = 38, RULE_refOperandCanonical = 39, RULE_scalar = 40;
	public static final String[] ruleNames = {
		"root", "stmt", "regoPackage", "importDirective", "regoRules", "ruleHead", 
		"ruleBody", "ruleExt", "regoElse", "regoBody", "nonEmptyBraceEnclosedBody", 
		"query", "literal", "literalExpr", "withKeyword", "functionCall", "exprTermPair", 
		"termPair", "exprTermPairList", "exprTerm", "exprTermList", "relationExpr", 
		"bitwiseOrExpr", "bitwiseAndExpr", "arithExpr", "factorExpr", "term", 
		"arrayComprehension", "setComprehension", "objectComprehension", "object_", 
		"objectItem", "array_", "set_", "emptySet", "nonEmptySet", "ref", "refOperand", 
		"refOperandDot", "refOperandCanonical", "scalar"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'null'", "'as'", "'default'", "'else'", "'import'", 
		"'package'", "'not'", "'with'", "'set('", "'['", "'{'", "'('", "']'", 
		"'}'", "')'", "'|'", null, null, null, null, "','", "';'", "':'", "'&'", 
		"'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "Comment", "String", "Bool", "Null", "As", "Default", "Else", "Import", 
		"Package", "Not", "With", "Set", "LSBrace", "LCBrace", "LParan", "RSBrace", 
		"RCBrace", "RParan", "Mid", "FactorOperator", "ArithOperator", "RelationOperator", 
		"EqOper", "Comma", "Semicolon", "Colon", "Ampersand", "Dot", "WhiteSpace", 
		"LineEnd", "WindowsLineEnd", "UnsignedNumber", "Name"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RegoParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RegoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RegoParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << String) | (1L << Bool) | (1L << Null) | (1L << Default) | (1L << Import) | (1L << Package) | (1L << Not) | (1L << Set) | (1L << LSBrace) | (1L << LCBrace) | (1L << LParan) | (1L << ArithOperator) | (1L << UnsignedNumber) | (1L << Name))) != 0)) {
				{
				{
				setState(82);
				stmt();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public RegoPackageContext regoPackage() {
			return getRuleContext(RegoPackageContext.class,0);
		}
		public ImportDirectiveContext importDirective() {
			return getRuleContext(ImportDirectiveContext.class,0);
		}
		public RegoRulesContext regoRules() {
			return getRuleContext(RegoRulesContext.class,0);
		}
		public RegoBodyContext regoBody() {
			return getRuleContext(RegoBodyContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitStmt(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				regoPackage();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				importDirective();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				regoRules();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				regoBody();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegoPackageContext extends ParserRuleContext {
		public TerminalNode Package() { return getToken(RegoParser.Package, 0); }
		public RefContext ref() {
			return getRuleContext(RefContext.class,0);
		}
		public RegoPackageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regoPackage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterRegoPackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitRegoPackage(this);
		}
	}

	public final RegoPackageContext regoPackage() throws RecognitionException {
		RegoPackageContext _localctx = new RegoPackageContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_regoPackage);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(Package);
			setState(97);
			ref();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDirectiveContext extends ParserRuleContext {
		public RefContext import_target;
		public RefContext import_target_rename_as;
		public TerminalNode Import() { return getToken(RegoParser.Import, 0); }
		public List<RefContext> ref() {
			return getRuleContexts(RefContext.class);
		}
		public RefContext ref(int i) {
			return getRuleContext(RefContext.class,i);
		}
		public TerminalNode As() { return getToken(RegoParser.As, 0); }
		public ImportDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterImportDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitImportDirective(this);
		}
	}

	public final ImportDirectiveContext importDirective() throws RecognitionException {
		ImportDirectiveContext _localctx = new ImportDirectiveContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importDirective);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(Import);
			setState(100);
			((ImportDirectiveContext)_localctx).import_target = ref();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==As) {
				{
				setState(101);
				match(As);
				setState(102);
				((ImportDirectiveContext)_localctx).import_target_rename_as = ref();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegoRulesContext extends ParserRuleContext {
		public TerminalNode Default() { return getToken(RegoParser.Default, 0); }
		public TerminalNode Name() { return getToken(RegoParser.Name, 0); }
		public TerminalNode EqOper() { return getToken(RegoParser.EqOper, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public RuleHeadContext ruleHead() {
			return getRuleContext(RuleHeadContext.class,0);
		}
		public List<RuleBodyContext> ruleBody() {
			return getRuleContexts(RuleBodyContext.class);
		}
		public RuleBodyContext ruleBody(int i) {
			return getRuleContext(RuleBodyContext.class,i);
		}
		public RegoRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regoRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterRegoRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitRegoRules(this);
		}
	}

	public final RegoRulesContext regoRules() throws RecognitionException {
		RegoRulesContext _localctx = new RegoRulesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_regoRules);
		try {
			int _alt;
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Default:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(Default);
				setState(106);
				match(Name);
				setState(107);
				match(EqOper);
				setState(108);
				term();
				}
				break;
			case Name:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				ruleHead();
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(110);
						ruleBody();
						}
						} 
					}
					setState(115);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleHeadContext extends ParserRuleContext {
		public TerminalNode Name() { return getToken(RegoParser.Name, 0); }
		public TerminalNode LParan() { return getToken(RegoParser.LParan, 0); }
		public TerminalNode RParan() { return getToken(RegoParser.RParan, 0); }
		public TerminalNode LSBrace() { return getToken(RegoParser.LSBrace, 0); }
		public List<ExprTermContext> exprTerm() {
			return getRuleContexts(ExprTermContext.class);
		}
		public ExprTermContext exprTerm(int i) {
			return getRuleContext(ExprTermContext.class,i);
		}
		public TerminalNode RSBrace() { return getToken(RegoParser.RSBrace, 0); }
		public TerminalNode EqOper() { return getToken(RegoParser.EqOper, 0); }
		public ExprTermListContext exprTermList() {
			return getRuleContext(ExprTermListContext.class,0);
		}
		public RuleHeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleHead; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterRuleHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitRuleHead(this);
		}
	}

	public final RuleHeadContext ruleHead() throws RecognitionException {
		RuleHeadContext _localctx = new RuleHeadContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ruleHead);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(Name);
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(119);
				match(LParan);
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << String) | (1L << Bool) | (1L << Null) | (1L << Not) | (1L << Set) | (1L << LSBrace) | (1L << LCBrace) | (1L << LParan) | (1L << ArithOperator) | (1L << UnsignedNumber) | (1L << Name))) != 0)) {
					{
					setState(120);
					exprTermList();
					}
				}

				setState(123);
				match(RParan);
				}
				break;
			}
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(126);
				match(LSBrace);
				setState(127);
				exprTerm();
				setState(128);
				match(RSBrace);
				}
				break;
			}
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EqOper) {
				{
				setState(132);
				match(EqOper);
				setState(133);
				exprTerm();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleBodyContext extends ParserRuleContext {
		public NonEmptyBraceEnclosedBodyContext nonEmptyBraceEnclosedBody() {
			return getRuleContext(NonEmptyBraceEnclosedBodyContext.class,0);
		}
		public TerminalNode Else() { return getToken(RegoParser.Else, 0); }
		public TerminalNode EqOper() { return getToken(RegoParser.EqOper, 0); }
		public ExprTermContext exprTerm() {
			return getRuleContext(ExprTermContext.class,0);
		}
		public RuleBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterRuleBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitRuleBody(this);
		}
	}

	public final RuleBodyContext ruleBody() throws RecognitionException {
		RuleBodyContext _localctx = new RuleBodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ruleBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Else) {
				{
				setState(136);
				match(Else);
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EqOper) {
					{
					setState(137);
					match(EqOper);
					setState(138);
					exprTerm();
					}
				}

				}
			}

			setState(143);
			nonEmptyBraceEnclosedBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleExtContext extends ParserRuleContext {
		public RegoElseContext regoElse() {
			return getRuleContext(RegoElseContext.class,0);
		}
		public NonEmptyBraceEnclosedBodyContext nonEmptyBraceEnclosedBody() {
			return getRuleContext(NonEmptyBraceEnclosedBodyContext.class,0);
		}
		public RuleExtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleExt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterRuleExt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitRuleExt(this);
		}
	}

	public final RuleExtContext ruleExt() throws RecognitionException {
		RuleExtContext _localctx = new RuleExtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ruleExt);
		try {
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Else:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				regoElse();
				}
				break;
			case LCBrace:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				nonEmptyBraceEnclosedBody();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegoElseContext extends ParserRuleContext {
		public TerminalNode Else() { return getToken(RegoParser.Else, 0); }
		public TerminalNode EqOper() { return getToken(RegoParser.EqOper, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public NonEmptyBraceEnclosedBodyContext nonEmptyBraceEnclosedBody() {
			return getRuleContext(NonEmptyBraceEnclosedBodyContext.class,0);
		}
		public RegoElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regoElse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterRegoElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitRegoElse(this);
		}
	}

	public final RegoElseContext regoElse() throws RecognitionException {
		RegoElseContext _localctx = new RegoElseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_regoElse);
		try {
			setState(156);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				match(Else);
				setState(150);
				match(EqOper);
				setState(151);
				term();
				setState(152);
				nonEmptyBraceEnclosedBody();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				match(Else);
				setState(155);
				nonEmptyBraceEnclosedBody();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegoBodyContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public NonEmptyBraceEnclosedBodyContext nonEmptyBraceEnclosedBody() {
			return getRuleContext(NonEmptyBraceEnclosedBodyContext.class,0);
		}
		public RegoBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regoBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterRegoBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitRegoBody(this);
		}
	}

	public final RegoBodyContext regoBody() throws RecognitionException {
		RegoBodyContext _localctx = new RegoBodyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_regoBody);
		try {
			setState(160);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				query();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				nonEmptyBraceEnclosedBody();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonEmptyBraceEnclosedBodyContext extends ParserRuleContext {
		public TerminalNode LCBrace() { return getToken(RegoParser.LCBrace, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode RCBrace() { return getToken(RegoParser.RCBrace, 0); }
		public NonEmptyBraceEnclosedBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonEmptyBraceEnclosedBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterNonEmptyBraceEnclosedBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitNonEmptyBraceEnclosedBody(this);
		}
	}

	public final NonEmptyBraceEnclosedBodyContext nonEmptyBraceEnclosedBody() throws RecognitionException {
		NonEmptyBraceEnclosedBodyContext _localctx = new NonEmptyBraceEnclosedBodyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_nonEmptyBraceEnclosedBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(LCBrace);
			setState(163);
			query();
			setState(164);
			match(RCBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<TerminalNode> Semicolon() { return getTokens(RegoParser.Semicolon); }
		public TerminalNode Semicolon(int i) {
			return getToken(RegoParser.Semicolon, i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_query);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			literal();
			setState(173);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(168);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==Semicolon) {
						{
						setState(167);
						match(Semicolon);
						}
					}

					setState(170);
					literal();
					}
					} 
				}
				setState(175);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public LiteralExprContext literalExpr() {
			return getRuleContext(LiteralExprContext.class,0);
		}
		public TerminalNode Not() { return getToken(RegoParser.Not, 0); }
		public List<WithKeywordContext> withKeyword() {
			return getRuleContexts(WithKeywordContext.class);
		}
		public WithKeywordContext withKeyword(int i) {
			return getRuleContext(WithKeywordContext.class,i);
		}
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegoParserListener ) ((RegoParserListener)listener).exitLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(176);
				match(Not);
				}
				break;
			}
			setState(179);
			literalExpr();
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==With) {
				{
				{
				setState(180);
				withKeyword();
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
